--- a/postmarketos-wiki/html/en/Category:Devices.html
+++ b/postmarketos-wiki/html/en/Category:Devices.html
@@ -46,7 +46,7 @@
 </div>
 <div id="mw-pages">
 <h2>Pages in category "Devices"</h2>
-<p>The following 200 pages are in this category, out of 710 total.
+<p>The following 200 pages are in this category, out of 714 total.
 </p>(previous page) (<a href="/index.php?title=Category:Devices&amp;pagefrom=Kobo+Glo+HD+%28kobo-glo-hd%29#mw-pages" title="Category:Devices">next page</a>)<div lang="en" dir="ltr" class="mw-content-ltr"><div class="mw-category">
 <div class="mw-category-group">
 <h3>A</h3>
@@ -57,8 +57,8 @@
 <li><a href="../en/Acer_Iconia_Tab_A200_(acer-picasso-e).html" title="Acer Iconia Tab A200 (acer-picasso-e)">Acer Iconia Tab A200 (acer-picasso-e)</a></li>
 <li><a href="../en/Acer_Iconia_Tab_A500_(acer-picasso).html" title="Acer Iconia Tab A500 (acer-picasso)">Acer Iconia Tab A500 (acer-picasso)</a></li>
 <li><a href="../en/Acer_Iconia_w511.html" title="Acer Iconia w511">Acer Iconia w511</a></li>
+<li><a href="../en/Acer_Liquid_Zest_4G_(acer-t07).html" title="Acer Liquid Zest 4G (acer-t07)">Acer Liquid Zest 4G (acer-t07)</a></li>
 <li><a href="../en/Acer_Liquid_Zest_4G_(Codename:_Acer-Miro).html" title="Acer Liquid Zest 4G (Codename: Acer-Miro)">Acer Liquid Zest 4G (Codename: Acer-Miro)</a></li>
-<li><a href="../en/Acer_Liquid_Zest_4G_(Codename:_Acer-T07).html" title="Acer Liquid Zest 4G (Codename: Acer-T07)">Acer Liquid Zest 4G (Codename: Acer-T07)</a></li>
 <li><a href="../en/AGM_A8_(agm-grip).html" title="AGM A8 (agm-grip)">AGM A8 (agm-grip)</a></li>
 <li><a href="../en/Alcatel_Idol_3_4.7%22_(alcatel-idol347).html" title='Alcatel Idol 3 4.7" (alcatel-idol347)'>Alcatel Idol 3 4.7" (alcatel-idol347)</a></li>
 <li><a href="../en/Alcatel_Idol_3_5.5%22_(alcatel-idol3).html" title='Alcatel Idol 3 5.5" (alcatel-idol3)'>Alcatel Idol 3 5.5" (alcatel-idol3)</a></li>
