--- a/postmarketos-wiki/html/en/Category:Not_booting.html
+++ b/postmarketos-wiki/html/en/Category:Not_booting.html
@@ -38,8 +38,8 @@
 </div>
 <div class="mw-category-generated" lang="en" dir="ltr"><div id="mw-pages">
 <h2>Pages in category "Not booting"</h2>
-<p>The following 200 pages are in this category, out of 246 total.
-</p>(previous page) (<a href="/index.php?title=Category:Not_booting&amp;pagefrom=Sony+Xperia+E+Dual+%28sony-nanhu%29#mw-pages" title="Category:Not booting">next page</a>)<div lang="en" dir="ltr" class="mw-content-ltr"><div class="mw-category">
+<p>The following 200 pages are in this category, out of 247 total.
+</p>(previous page) (<a href="/index.php?title=Category:Not_booting&amp;pagefrom=Sony+Xperia+acro+S+%28sony-hikari%29#mw-pages" title="Category:Not booting">next page</a>)<div lang="en" dir="ltr" class="mw-content-ltr"><div class="mw-category">
 <div class="mw-category-group">
 <h3>A</h3>
 <ul>
@@ -313,10 +313,10 @@
 <li><a href="../en/Sony_SmartWatch_3_(sony-tetra).html" title="Sony SmartWatch 3 (sony-tetra)">Sony SmartWatch 3 (sony-tetra)</a></li>
 <li><a href="../en/Sony_Xperia_10_II_(sony-pdx201).html" title="Sony Xperia 10 II (sony-pdx201)">Sony Xperia 10 II (sony-pdx201)</a></li>
 <li><a href="../en/Sony_Xperia_10_III_(sony-pdx213).html" title="Sony Xperia 10 III (sony-pdx213)">Sony Xperia 10 III (sony-pdx213)</a></li>
-<li><a href="../en/Sony_Xperia_acro_S_(sony-hikari).html" title="Sony Xperia acro S (sony-hikari)">Sony Xperia acro S (sony-hikari)</a></li>
+<li><a href="../en/Sony_Xperia_5_II.html" title="Sony Xperia 5 II">Sony Xperia 5 II</a></li>
 </ul>
 </div>
-</div></div>(previous page) (<a href="/index.php?title=Category:Not_booting&amp;pagefrom=Sony+Xperia+E+Dual+%28sony-nanhu%29#mw-pages" title="Category:Not booting">next page</a>)
+</div></div>(previous page) (<a href="/index.php?title=Category:Not_booting&amp;pagefrom=Sony+Xperia+acro+S+%28sony-hikari%29#mw-pages" title="Category:Not booting">next page</a>)
 </div></div>
 </div>
 		
