--- a/postmarketos-wiki/html/en/Category:Pages_with_broken_file_links.html
+++ b/postmarketos-wiki/html/en/Category:Pages_with_broken_file_links.html
@@ -48,7 +48,6 @@
 <li><a href="../en/Alcatel_Idol_3_5.5%22_(alcatel-idol3).html" title='Alcatel Idol 3 5.5" (alcatel-idol3)'>Alcatel Idol 3 5.5" (alcatel-idol3)</a></li>
 <li><a href="../en/Alcatel_Pop_2_(4.5)_(alcatel-alto45).html" title="Alcatel Pop 2 (4.5) (alcatel-alto45)">Alcatel Pop 2 (4.5) (alcatel-alto45)</a></li>
 <li><a href="../en/Apple_iPad_Air_2_(apple-ipad5,3).html" title="Apple iPad Air 2 (apple-ipad5,3)">Apple iPad Air 2 (apple-ipad5,3)</a></li>
-<li><a href="../en/ASUS_Chromebook_Flip_C100_(google-veyron-minnie).html" title="ASUS Chromebook Flip C100 (google-veyron-minnie)">ASUS Chromebook Flip C100 (google-veyron-minnie)</a></li>
 <li><a href="../en/Asus_ZenPad_7_(asus-p01z).html" title="Asus ZenPad 7 (asus-p01z)">Asus ZenPad 7 (asus-p01z)</a></li>
 </ul>
 </div>
@@ -169,6 +168,7 @@
 <li><a href="../en/Samsung_Wave_2_(samsung-s8530).html" title="Samsung Wave 2 (samsung-s8530)">Samsung Wave 2 (samsung-s8530)</a></li>
 <li><a href="../en/Selecline_Smartphone_5_(auchan-s6s5in3g).html" title="Selecline Smartphone 5 (auchan-s6s5in3g)">Selecline Smartphone 5 (auchan-s6s5in3g)</a></li>
 <li><a href="../en/Sony_PSVita_(sony-psvita).html" title="Sony PSVita (sony-psvita)">Sony PSVita (sony-psvita)</a></li>
+<li><a href="../en/Sony_Xperia_5_II.html" title="Sony Xperia 5 II">Sony Xperia 5 II</a></li>
 <li><a href="../en/Sony_Xperia_E1_(sony-Falcon_SS).html" title="Sony Xperia E1 (sony-Falcon SS)">Sony Xperia E1 (sony-Falcon SS)</a></li>
 <li><a href="../en/Sony_Xperia_J_(sony-jlo).html" title="Sony Xperia J (sony-jlo)">Sony Xperia J (sony-jlo)</a></li>
 <li><a href="../en/Sony_Xperia_P_(sony-nypon).html" title="Sony Xperia P (sony-nypon)">Sony Xperia P (sony-nypon)</a></li>
