--- a/postmarketos-wiki/html/en/Category:Todo_Items.html
+++ b/postmarketos-wiki/html/en/Category:Todo_Items.html
@@ -38,7 +38,7 @@
 </div>
 <div class="mw-category-generated" lang="en" dir="ltr"><div id="mw-pages">
 <h2>Pages in category "Todo Items"</h2>
-<p>The following 34 pages are in this category, out of 34 total.
+<p>The following 35 pages are in this category, out of 35 total.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr"><div class="mw-category">
 <div class="mw-category-group">
@@ -46,6 +46,7 @@
 <ul>
 <li><a href="../en/Alcatel_OneTouch_Pixi_4_(5)_5010D_(alcatel-5010d).html" title="Alcatel OneTouch Pixi 4 (5) 5010D (alcatel-5010d)">Alcatel OneTouch Pixi 4 (5) 5010D (alcatel-5010d)</a></li>
 <li><a href="../User:Alpabrz_WebApps.html" title="User:Alpabrz/WebApps">User:Alpabrz/WebApps</a></li>
+<li><a href="../en/Android_AB_Slots.html" title="Android AB Slots">Android AB Slots</a></li>
 </ul>
 </div>
 <div class="mw-category-group">
