--- a/postmarketos-wiki/html/en/Chrome_OS_devices.html
+++ b/postmarketos-wiki/html/en/Chrome_OS_devices.html
@@ -139,6 +139,21 @@
 <td class="field_Bluetooth">Y</td>
 <td class="field_Camera">N</td>
 </tr>
+<tr>
+<td class="field_Device"><a href="../en/Samsung_Chromebook_Plus_(google-kevin).html" title="Samsung Chromebook Plus (google-kevin)">Samsung Chromebook Plus</a></td>
+<td class="field_Codename">google-kevin</td>
+<td class="field_Architecture">aarch64</td>
+<td class="field_Screen">Y</td>
+<td class="field_Touch">Y</td>
+<td class="field_Wifi">Y</td>
+<td class="field_FDE">Y</td>
+<td class="field_Mainline">Y</td>
+<td class="field_Battery">Y</td>
+<td class="field_3D">Y</td>
+<td class="field_Audio">Y</td>
+<td class="field_Bluetooth">Y</td>
+<td class="field_Camera">Y</td>
+</tr>
 </tbody>
 </table>
 <h2><span class="mw-headline" id="Preparation">Preparation</span></h2>
