--- a/postmarketos-wiki/html/en/Devices.html
+++ b/postmarketos-wiki/html/en/Devices.html
@@ -502,6 +502,29 @@
 <td class="field_NFC">Y</td>
 </tr>
 <tr>
+<td class="field_Device"><a href="../en/Samsung_Galaxy_E7_(samsung-e7).html" title="Samsung Galaxy E7 (samsung-e7)">Samsung Galaxy E7</a></td>
+<td class="field_Codename">samsung-e7</td>
+<td class="field_Architecture">armv7 / aarch64</td>
+<td class="field_USB_Net">Y</td>
+<td class="field_Flashing">Y</td>
+<td class="field_Touch">Y</td>
+<td class="field_Screen">P</td>
+<td class="field_Wifi">Y</td>
+<td class="field_FDE">Y</td>
+<td class="field_Battery">P</td>
+<td class="field_3D">Y</td>
+<td class="field_IMU">P</td>
+<td class="field_Audio">Y</td>
+<td class="field_Bluetooth">Y</td>
+<td class="field_Camera">N</td>
+<td class="field_GPS"></td>
+<td class="field_Mobile_Data">Y</td>
+<td class="field_SMS">Y</td>
+<td class="field_Calls">Y</td>
+<td class="field_USB-OTG">P</td>
+<td class="field_NFC">Y</td>
+</tr>
+<tr>
 <td class="field_Device"><a href="../en/Samsung_Galaxy_S_III_(samsung-m0).html" title="Samsung Galaxy S III (samsung-m0)">Samsung Galaxy S III</a></td>
 <td class="field_Codename">samsung-m0</td>
 <td class="field_Architecture">armv7</td>
@@ -831,13 +854,12 @@
 <p>All other device ports, including new ones. Maintainers can create merge requests to move devices to community if requirements are met on the <a href="../en/Device_categorization.html" title="Device categorization">Device categorization</a> page. A more detailed view with a full status matrix of these devices can be found on the <a href="../en/All_devices.html" title="All devices">All devices</a> page.
 </p>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
-<li class="mw-empty-elt">
 <li>
 <a href="../en/Acer_CloudMobile_S500_(acer-swing).html" title="Acer CloudMobile S500 (acer-swing)">Acer CloudMobile S500</a> (<span class="cargoFieldName">Codename:</span> acer-swing)</li>
 <li>
 <a href="../en/Acer_Iconia_Tab_A500_(acer-picasso).html" title="Acer Iconia Tab A500 (acer-picasso)">Acer Iconia Tab A500</a> (<span class="cargoFieldName">Codename:</span> acer-picasso)</li>
 <li>
-<a href="../en/Acer_Liquid_Zest_4G_(Codename:_Acer-T07).html" title="Acer Liquid Zest 4G (Codename: Acer-T07)">Acer Liquid Zest 4G</a> (<span class="cargoFieldName">Codename:</span> acer-t07)</li>
+<a href="../en/Acer_Liquid_Zest_4G_(acer-t07).html" title="Acer Liquid Zest 4G (acer-t07)">Acer Liquid Zest 4G</a> (<span class="cargoFieldName">Codename:</span> acer-t07)</li>
 <li>
 <a href="../en/Alcatel_Idol_3_4.7%22_(alcatel-idol347).html" title='Alcatel Idol 3 4.7" (alcatel-idol347)'>Alcatel Idol 3 (4.7")</a> (<span class="cargoFieldName">Codename:</span> alcatel-idol347)</li>
 <li>
@@ -1109,6 +1131,8 @@
 <li>
 <a href="../en/LG_K10_(lg-m216).html" title="LG K10 (lg-m216)">LG K10</a> (<span class="cargoFieldName">Codename:</span> lg-m216)</li>
 <li>
+<a href="../en/LG_K40_(lg-mmh4x).html" title="LG K40 (lg-mmh4x)">LG K40</a> (<span class="cargoFieldName">Codename:</span> lg-mmh4x)</li>
+<li>
 <a href="../en/LG_L65_Dual_SIM_D285_(lg-d285).html" title="LG L65 Dual SIM D285 (lg-d285)">LG L65 Dual SIM D285</a> (<span class="cargoFieldName">Codename:</span> lg-d285)</li>
 <li>
 <a href="../en/LG_L70_(lg-w5).html" title="LG L70 (lg-w5)">LG L70</a> (<span class="cargoFieldName">Codename:</span> lg-w5)</li>
@@ -1305,6 +1329,8 @@
 <li>
 <a href="../en/Samsung_Chromebook_2_13.3%22_(google-peach-pi).html" title='Samsung Chromebook 2 13.3" (google-peach-pi)'>Samsung Chromebook 2 13.3"</a> (<span class="cargoFieldName">Codename:</span> google-peach-pi)</li>
 <li>
+<a href="../en/Samsung_Chromebook_Plus_(google-kevin).html" title="Samsung Chromebook Plus (google-kevin)">Samsung Chromebook Plus</a> (<span class="cargoFieldName">Codename:</span> google-kevin)</li>
+<li>
 <a href="../en/Samsung_Galaxy_A20.html" title="Samsung Galaxy A20">Samsung Galaxy A20</a> (<span class="cargoFieldName">Codename:</span> samsung-a20)</li>
 <li>
 <a href="../en/Samsung_Galaxy_A3_2017_(samsung-a3y17lte).html" title="Samsung Galaxy A3 2017 (samsung-a3y17lte)">Samsung Galaxy A3 (2017)</a> (<span class="cargoFieldName">Codename:</span> samsung-a3y17lte)</li>
@@ -1333,15 +1359,13 @@
 <li>
 <a href="../en/Samsung_Galaxy_Chat_(samsung-zanin).html" title="Samsung Galaxy Chat (samsung-zanin)">Samsung Galaxy Chat</a> (<span class="cargoFieldName">Codename:</span> samsung-zanin)</li>
 <li>
-<a href="../en/Samsung_Galaxy_Core_I8260_I8262_(samsung-arubaslim).html" title="Samsung Galaxy Core I8260/I8262 (samsung-arubaslim)">Samsung Galaxy Core I8260/I8262 (2013)</a> (<span class="cargoFieldName">Codename:</span> samsung-arubaslim)</li>
+<a href="../en/Samsung_Galaxy_Core_(samsung-arubaslim).html" title="Samsung Galaxy Core (samsung-arubaslim)">Samsung Galaxy Core I8260/I8262 (2013)</a> (<span class="cargoFieldName">Codename:</span> samsung-arubaslim)</li>
 <li>
 <a href="../en/Samsung_Galaxy_Core_Plus_(samsung-cs02).html" title="Samsung Galaxy Core Plus (samsung-cs02)">Samsung Galaxy Core Plus</a> (<span class="cargoFieldName">Codename:</span> samsung-cs02)</li>
 <li>
 <a href="../en/Samsung_Galaxy_Core_Prime_LTE_(samsung-coreprimelte).html" title="Samsung Galaxy Core Prime LTE (samsung-coreprimelte)">Samsung Galaxy Core Prime LTE</a> (<span class="cargoFieldName">Codename:</span> samsung-coreprimelte, sm-g360f)</li>
 <li>
 <a href="../en/Samsung_Galaxy_Core_Prime_VE_LTE_(samsung-coreprimevelte).html" title="Samsung Galaxy Core Prime VE LTE (samsung-coreprimevelte)">Samsung Galaxy Core Prime VE LTE</a> (<span class="cargoFieldName">Codename:</span> samsung-coreprimevelte)</li>
-<li>
-<a href="../en/Samsung_Galaxy_E7_(samsung-e7).html" title="Samsung Galaxy E7 (samsung-e7)">Samsung Galaxy E7</a> (<span class="cargoFieldName">Codename:</span> samsung-e7)</li>
 <li>
 <a href="../en/Samsung_Galaxy_Express_SGH-I437_(samsung-expressatt).html" title="Samsung Galaxy Express SGH-I437 (samsung-expressatt)">Samsung Galaxy Express SGH-I437</a> (<span class="cargoFieldName">Codename:</span> samsung-expressatt)</li>
 <li>
@@ -1513,6 +1537,8 @@
 <li>
 <a href="../en/Samsung_Galaxy_Young_NFC_(samsung-royssnfc).html" title="Samsung Galaxy Young NFC (samsung-royssnfc)">Samsung Galaxy Young (with NFC) (GT-6310N)</a> (<span class="cargoFieldName">Codename:</span> samsung-royssnfc)</li>
 <li>
+<a href="../en/Samsung_Z1_(samsung-kiran).html" title="Samsung Z1 (samsung-kiran)">Samsung Z1</a> (<span class="cargoFieldName">Codename:</span> samsung-kiran)</li>
+<li>
 <a href="../en/Samsung_Nexus_S_(samsung-crespo).html" title="Samsung Nexus S (samsung-crespo)">Samsung (Google) Nexus S</a> (<span class="cargoFieldName">Codename:</span> samsung-crespo)</li>
 <li>
 <a href="../en/SHARP_AQUOS_PHONE_SERIE_SHL22_(sharp-shl22).html" title="SHARP AQUOS PHONE SERIE SHL22 (sharp-shl22)">SHARP AQUOS PHONE SERIE SHL22</a> (<span class="cargoFieldName">Codename:</span> sharp-shl22)</li>
@@ -1634,6 +1660,8 @@
 <a href="../en/Xiaomi_Mi_Pad_4_(xiaomi-clover).html" title="Xiaomi Mi Pad 4 (xiaomi-clover)">Xiaomi Mi Pad 4</a> (<span class="cargoFieldName">Codename:</span> xiaomi-clover)</li>
 <li>
 <a href="../en/Xiaomi_Mi_Pad_5_Pro_(xiaomi-elish).html" title="Xiaomi Mi Pad 5 Pro (xiaomi-elish)">Xiaomi Mi Pad 5 Pro</a> (<span class="cargoFieldName">Codename:</span> xiaomi-elish)</li>
+<li>
+<a href="../en/Xiaomi-nabu.html" title="Xiaomi-nabu">Xiaomi Pad 5</a> (<span class="cargoFieldName">Codename:</span> xiaomi-nabu)</li>
 <li>
 <a href="../en/Xiaomi_Poco_F3_(xiaomi-alioth).html" title="Xiaomi Poco F3 (xiaomi-alioth)">Xiaomi Poco F3</a> (<span class="cargoFieldName">Codename:</span> xiaomi-alioth)</li>
 <li>
@@ -2072,6 +2100,8 @@
 <a href="../en/Sony_Xperia_10_II_(sony-pdx201).html" title="Sony Xperia 10 II (sony-pdx201)">Sony Xperia 10 II</a> (<span class="cargoFieldName">Codename:</span> sony-pdx201)</li>
 <li>
 <a href="../en/Sony_Xperia_10_III_(sony-pdx213).html" title="Sony Xperia 10 III (sony-pdx213)">Sony Xperia 10 III</a> (<span class="cargoFieldName">Codename:</span> sony-pdx213)</li>
+<li>
+<a href="../en/Sony_Xperia_5_II.html" title="Sony Xperia 5 II">Sony Xperia 5 II</a> (<span class="cargoFieldName">Codename:</span> sony-pdx206)</li>
 <li>
 <a href="../en/Sony_Xperia_acro_S_(sony-hikari).html" title="Sony Xperia acro S (sony-hikari)">Sony Xperia acro S (LT26w)</a> (<span class="cargoFieldName">Codename:</span> sony-hikari)</li>
 <li>
