--- a/postmarketos-wiki/html/en/Huawei_Y560_(huawei-y560).html
+++ b/postmarketos-wiki/html/en/Huawei_Y560_(huawei-y560).html
@@ -291,6 +291,8 @@ armv7</td>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
 <li>
+<a href="../User:SmP971.html" title="User:SmP971">SmP971</a> (<span class="cargoFieldName">Notes:</span> Broken touchscreen, still working.)</li>
+<li>
 <a href="../User:Sonic011gamer.html" title="User:Sonic011gamer">Sonic011gamer</a> (<span class="cargoFieldName">Notes:</span> absolute legend)</li>
 </ul></div>
 <p><br>
