--- a/postmarketos-wiki/html/en/MediaTek_MT6735.html
+++ b/postmarketos-wiki/html/en/MediaTek_MT6735.html
@@ -207,7 +207,7 @@ no</td>
 <td class="field_Mainline"></td>
 </tr>
 <tr>
-<td class="field_Device"><a href="../en/Acer_Liquid_Zest_4G_(Codename:_Acer-T07).html" title="Acer Liquid Zest 4G (Codename: Acer-T07)">Acer Liquid Zest 4G</a></td>
+<td class="field_Device"><a href="../en/Acer_Liquid_Zest_4G_(acer-t07).html" title="Acer Liquid Zest 4G (acer-t07)">Acer Liquid Zest 4G</a></td>
 <td class="field_Codename">acer-t07</td>
 <td class="field_Chipset">MediaTek MT6735</td>
 <td class="field_Mainline"></td>
