--- a/postmarketos-wiki/html/en/Motorola_Moto_G5_(motorola-cedric).html
+++ b/postmarketos-wiki/html/en/Motorola_Moto_G5_(motorola-cedric).html
@@ -299,7 +299,8 @@ aarch64</td>
 <ul><li>Hacker420</li></ul>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
-<li><a href="../User:Hacker420.html" title="User:Hacker420">Hacker420</a></li>
+<li>
+<a href="../User:Hacker420.html" title="User:Hacker420">Hacker420</a> (<span class="cargoFieldName">Notes:</span> Available for tinkering, running UT)</li>
 <li>
 <a href="../User:Lostnet.html" title="User:Lostnet">Lostnet</a> (<span class="cargoFieldName">Notes:</span> hopefully testing soon)</li>
 <li>
