--- a/postmarketos-wiki/html/en/NFC.html
+++ b/postmarketos-wiki/html/en/NFC.html
@@ -65,6 +65,11 @@
 <td class="field_Category">community</td>
 </tr>
 <tr>
+<td class="field_Device"><a href="../en/Samsung_Galaxy_E7_(samsung-e7).html" title="Samsung Galaxy E7 (samsung-e7)">Samsung Galaxy E7</a></td>
+<td class="field_Codename">samsung-e7</td>
+<td class="field_Category">community</td>
+</tr>
+<tr>
 <td class="field_Device"><a href="../en/Samsung_Galaxy_S4_Mini_Value_Edition_(samsung-serranove).html" title="Samsung Galaxy S4 Mini Value Edition (samsung-serranove)">Samsung Galaxy S4 Mini Value Edition</a></td>
 <td class="field_Codename">samsung-serranove</td>
 <td class="field_Category">community</td>
@@ -125,13 +130,13 @@
 <td class="field_Category">testing</td>
 </tr>
 <tr>
-<td class="field_Device"><a href="../en/Samsung_Galaxy_E7_(samsung-e7).html" title="Samsung Galaxy E7 (samsung-e7)">Samsung Galaxy E7</a></td>
-<td class="field_Codename">samsung-e7</td>
+<td class="field_Device"><a href="../en/Samsung_Galaxy_Grand_Prime_(samsung-gprime).html" title="Samsung Galaxy Grand Prime (samsung-gprime)">Samsung Galaxy Grand Prime</a></td>
+<td class="field_Codename">samsung-gprime, samsung-gprimeltecan, samsung-gprimeltexx, samsung-fortuna3g, samsung-fortunaltezt</td>
 <td class="field_Category">testing</td>
 </tr>
 <tr>
-<td class="field_Device"><a href="../en/Samsung_Galaxy_Grand_Prime_(samsung-gprime).html" title="Samsung Galaxy Grand Prime (samsung-gprime)">Samsung Galaxy Grand Prime</a></td>
-<td class="field_Codename">samsung-gprime, samsung-gprimeltecan, samsung-gprimeltexx, samsung-fortuna3g, samsung-fortunaltezt</td>
+<td class="field_Device"><a href="../en/Samsung_Galaxy_S_Advance_(samsung-janice).html" title="Samsung Galaxy S Advance (samsung-janice)">Samsung Galaxy S Advance GT-I9070</a></td>
+<td class="field_Codename">samsung-janice</td>
 <td class="field_Category">testing</td>
 </tr>
 <tr>
