--- a/postmarketos-wiki/html/en/Non-android_devices.html
+++ b/postmarketos-wiki/html/en/Non-android_devices.html
@@ -141,7 +141,7 @@
 <td class="field_Battery">Y</td>
 <td class="field_3D">Y</td>
 <td class="field_IMU">-</td>
-<td class="field_Audio">P</td>
+<td class="field_Audio">Y</td>
 <td class="field_Bluetooth">N</td>
 <td class="field_Camera">N</td>
 <td class="field_GPS">-</td>
@@ -155,16 +155,16 @@
 <td class="field_Architecture">armv7</td>
 <td class="field_USB_Net">-</td>
 <td class="field_Flashing">-</td>
-<td class="field_Touch"></td>
+<td class="field_Touch">Y</td>
 <td class="field_Screen">Y</td>
-<td class="field_Wifi"></td>
+<td class="field_Wifi">Y</td>
 <td class="field_Xwayland">Y</td>
-<td class="field_FDE"></td>
+<td class="field_FDE">Y</td>
 <td class="field_Mainline">Y</td>
-<td class="field_Battery"></td>
+<td class="field_Battery">Y</td>
 <td class="field_3D">Y</td>
-<td class="field_IMU"></td>
-<td class="field_Audio"></td>
+<td class="field_IMU">N</td>
+<td class="field_Audio">Y</td>
 <td class="field_Bluetooth">N</td>
 <td class="field_Camera">N</td>
 <td class="field_GPS">-</td>
@@ -279,9 +279,9 @@
 <td class="field_Battery">Y</td>
 <td class="field_3D">Y</td>
 <td class="field_IMU">-</td>
-<td class="field_Audio"></td>
+<td class="field_Audio">Y</td>
 <td class="field_Bluetooth">Y</td>
-<td class="field_Camera"></td>
+<td class="field_Camera">N</td>
 <td class="field_GPS">-</td>
 <td class="field_Mobile_Data">-</td>
 <td class="field_SMS">-</td>
@@ -1139,6 +1139,29 @@
 <td class="field_Calls">-</td>
 </tr>
 <tr>
+<td class="field_Device"><a href="../en/Samsung_Chromebook_Plus_(google-kevin).html" title="Samsung Chromebook Plus (google-kevin)">Samsung Chromebook Plus</a></td>
+<td class="field_Codename">google-kevin</td>
+<td class="field_Architecture">aarch64</td>
+<td class="field_USB_Net">-</td>
+<td class="field_Flashing">-</td>
+<td class="field_Touch">Y</td>
+<td class="field_Screen">Y</td>
+<td class="field_Wifi">Y</td>
+<td class="field_Xwayland">Y</td>
+<td class="field_FDE">Y</td>
+<td class="field_Mainline">Y</td>
+<td class="field_Battery">Y</td>
+<td class="field_3D">Y</td>
+<td class="field_IMU">P</td>
+<td class="field_Audio">Y</td>
+<td class="field_Bluetooth">Y</td>
+<td class="field_Camera">Y</td>
+<td class="field_GPS">-</td>
+<td class="field_Mobile_Data">-</td>
+<td class="field_SMS">-</td>
+<td class="field_Calls">-</td>
+</tr>
+<tr>
 <td class="field_Device"><a href="../en/Sipeed_Lichee_Pi_Zero_(sipeed-licheezero).html" title="Sipeed Lichee Pi Zero (sipeed-licheezero)">Sipeed Lichee Pi Zero</a></td>
 <td class="field_Codename">sipeed-licheezero</td>
 <td class="field_Architecture">armv7</td>
@@ -1886,13 +1909,13 @@
 <td class="field_Codename">microsoft-saana</td>
 <td class="field_Architecture">armv7</td>
 <td class="field_USB_Net"></td>
-<td class="field_Flashing"></td>
+<td class="field_Flashing">Y</td>
 <td class="field_Touch"></td>
 <td class="field_Screen"></td>
 <td class="field_Wifi"></td>
 <td class="field_Xwayland"></td>
 <td class="field_FDE"></td>
-<td class="field_Mainline"></td>
+<td class="field_Mainline">Y</td>
 <td class="field_Battery"></td>
 <td class="field_3D"></td>
 <td class="field_IMU"></td>
