--- a/postmarketos-wiki/html/en/Raspberry_Pi_3_(raspberry-pi3).html
+++ b/postmarketos-wiki/html/en/Raspberry_Pi_3_(raspberry-pi3).html
@@ -317,6 +317,8 @@ aarch64</td>
 <li>
 <a href="../User:Sonichero.html" title="User:Sonichero">Sonichero</a> (<span class="cargoFieldName">Notes:</span> Model B+)</li>
 <li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> 3B+ serving as VPN server.)</li>
+<li>
 <a href="../User:StandaSK.html" title="User:StandaSK">StandaSK</a> (<span class="cargoFieldName">Notes:</span> 3B+)</li>
 <li>
 <a href="../User:Timbz.html" title="User:Timbz">Timbz</a> (<span class="cargoFieldName">Notes:</span> 3B+)</li>
