--- a/postmarketos-wiki/html/en/Rockchip_RK3399.html
+++ b/postmarketos-wiki/html/en/Rockchip_RK3399.html
@@ -213,6 +213,11 @@ yes</td>
 <td class="field_Codename">pine64-rockpro64</td>
 <td class="field_Mainline">Y</td>
 </tr>
+<tr>
+<td class="field_Device"><a href="../en/Samsung_Chromebook_Plus_(google-kevin).html" title="Samsung Chromebook Plus (google-kevin)">Samsung Chromebook Plus</a></td>
+<td class="field_Codename">google-kevin</td>
+<td class="field_Mainline">Y</td>
+</tr>
 </tbody>
 </table>
 <h2><span class="mw-headline" id="See_also">See also</span></h2>
