--- a/postmarketos-wiki/html/en/Samsung_Galaxy_A5_2015_(samsung-a5).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_A5_2015_(samsung-a5).html
@@ -309,8 +309,7 @@ aarch64</td>
 <li>
 <a href="../User:Debiansh.html" title="User:Debiansh">Debiansh</a> (<span class="cargoFieldName">Notes:</span> Notes: SM-A500FU Running postmarketOS with Phosh, not working display brightness, Camera and USB-OTG. I made a polish review: <a rel="nofollow" class="external free" href="https://www.internet-czas-dzialac.pl/recenzja-postmarketos/">https://www.internet-czas-dzialac.pl/recenzja-postmarketos/</a>)</li>
 <li><a href="../User:Grimler.html" title="User:Grimler">Grimler</a></li>
-<li>
-<a href="../User:JD9999.html" title="User:JD9999">JD9999</a> (<span class="cargoFieldName">Notes:</span> Touchscreen issues)</li>
+<li><a href="../User:JD9999.html" title="User:JD9999">JD9999</a></li>
 <li>
 <a href="../User:Knuxfanwin8.html" title="User:Knuxfanwin8">Knuxfanwin8</a> (<span class="cargoFieldName">Notes:</span> (SM-A500FU))</li>
 <li>
