--- a/postmarketos-wiki/html/en/Samsung_Galaxy_A8_2018_(samsung-jackpotlte).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_A8_2018_(samsung-jackpotlte).html
@@ -295,7 +295,8 @@ aarch64</td>
 <li><a href="../User:Manty.html" title="User:Manty">Manty</a></li>
 <li>
 <a href="../User:Ungeskriptet.html" title="User:Ungeskriptet">Ungeskriptet</a> (<span class="cargoFieldName">Notes:</span> Trebleized)</li>
-<li><a href="../User:VDavid003.html" title="User:VDavid003">VDavid003</a></li>
+<li>
+<a href="../User:VDavid003.html" title="User:VDavid003">VDavid003</a> (<span class="cargoFieldName">Notes:</span> A dev phone with 7885 EVT 0.1, and a daily driver with 7885 EVT 0.2)</li>
 </ul></div>
 <p><br>
 </p>
