--- a/postmarketos-wiki/html/en/Samsung_Galaxy_Ace_i_(samsung-s5830i).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_Ace_i_(samsung-s5830i).html
@@ -296,6 +296,8 @@ armhf</td>
 <li>
 <a href="../User:Maxnet.html" title="User:Maxnet">Maxnet</a> (<span class="cargoFieldName">Notes:</span> booting into bootloader fails)</li>
 <li><a href="../User:Sonichero.html" title="User:Sonichero">Sonichero</a></li>
+<li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> No screen, don't know if it works.)</li>
 </ul></div>
 <h2><span class="mw-headline" id="Entering_Recovery_Mode">Entering Recovery Mode</span></h2>
 <p>Press <span class="nowrap" title="This is not a clickable button; it illustrates the button one should find." style="padding:.2em .6em; border:1px solid; border-color:#AAA #555 #555 #AAA; border-radius: 3px; background-color: #F2F2F2;">Power</span> + <span class="nowrap" title="This is not a clickable button; it illustrates the button one should find." style="padding:.2em .6em; border:1px solid; border-color:#AAA #555 #555 #AAA; border-radius: 3px; background-color: #F2F2F2;">Volume Up</span> + <span class="nowrap" title="This is not a clickable button; it illustrates the button one should find." style="padding:.2em .6em; border:1px solid; border-color:#AAA #555 #555 #AAA; border-radius: 3px; background-color: #F2F2F2;">Home</span> to start the phone into recovery mode.
