--- a/postmarketos-wiki/html/en/Samsung_Galaxy_J3_(samsung-j3xnlte).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_J3_(samsung-j3xnlte).html
@@ -295,6 +295,7 @@ armv7</td>
 <i><a href="../User:Ster.html" title="User:Ster">Ster</a></i> Please contact me on Matrix if you are at any step of the process, either by mentioning my username <code>@sterrss:matrix.org</code> or simply message me directly, I'd love to hear any success, failures, difficulties. I'm not necessarily going to be able to help you, since I've still got lots to learn but it'd be nice to chat.</li></ul>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
+<li><a href="../User:Bastindo.html" title="User:Bastindo">Bastindo</a></li>
 <li>
 <a href="../User:Kalube.html" title="User:Kalube">Kalube</a> (<span class="cargoFieldName">Notes:</span> x2 Borked)</li>
 <li>
