--- a/postmarketos-wiki/html/en/Samsung_Galaxy_J5_2016_(samsung-j5x).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_J5_2016_(samsung-j5x).html
@@ -296,7 +296,11 @@ aarch64</td>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
 <li>
+<a href="../User:Hacker420.html" title="User:Hacker420">Hacker420</a> (<span class="cargoFieldName">Notes:</span> Currently unusable due to a swollen battery.)</li>
+<li>
 <a href="../User:Natsu.html" title="User:Natsu">Natsu</a> (<span class="cargoFieldName">Notes:</span> waiting to porting)</li>
+<li>
+<a href="../User:SmP971.html" title="User:SmP971">SmP971</a> (<span class="cargoFieldName">Notes:</span> Runs LineageOS 17.1, wait for pmOS)</li>
 <li><a href="../User:WonderfulShrineMaidenOfParadise.html" title="User:WonderfulShrineMaidenOfParadise">WonderfulShrineMaidenOfParadise</a></li>
 </ul></div>
 <p><br>
