--- a/postmarketos-wiki/html/en/Samsung_Galaxy_Mini_2_(samsung-jena).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_Mini_2_(samsung-jena).html
@@ -298,6 +298,8 @@ armv7</td>
 <li>
 <a href="../User:Halamix2.html" title="User:Halamix2">Halamix2</a> (<span class="cargoFieldName">Notes:</span> SD card slot is broken)</li>
 <li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> Simply nugget.)</li>
+<li>
 <a href="../User:Tfuxu.html" title="User:Tfuxu">Tfuxu</a> (<span class="cargoFieldName">Notes:</span> Unfortunately completely dead, possibly because of eMMC issues)</li>
 </ul></div>
 <p><br>
