--- a/postmarketos-wiki/html/en/Samsung_Galaxy_S_III_(samsung-m0).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_S_III_(samsung-m0).html
@@ -360,7 +360,9 @@ armv7</td>
 <li><a href="../User:Newbyte.html" title="User:Newbyte">Newbyte</a></li>
 <li><a href="../User:Nieldv.html" title="User:Nieldv">Nieldv</a></li>
 <li>
-<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> Mint condition, no issues)</li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> Broken screen and bad battery.)</li>
+<li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> Mint condition, no issues (with the original dock that came with it.))</li>
 <li><a href="../User:Thiagaoplusplus.html" title="User:Thiagaoplusplus">Thiagaoplusplus</a></li>
 <li>
 <a href="../User:UltrasonicMadness.html" title="User:UltrasonicMadness">UltrasonicMadness</a> (<span class="cargoFieldName">Notes:</span> GT-I9300)</li>
