--- a/postmarketos-wiki/html/en/Samsung_Galaxy_S_Plus_(samsung-ariesve).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_S_Plus_(samsung-ariesve).html
@@ -291,6 +291,8 @@ armv7</td>
 <li><a href="../User:Ilpianista.html" title="User:Ilpianista">Ilpianista</a></li>
 <li>
 <a href="../User:Nimayer.html" title="User:Nimayer">Nimayer</a> (<span class="cargoFieldName">Notes:</span> pmOS port author)</li>
+<li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> My 1st ever phone.)</li>
 </ul></div>
 <p><br>
 </p>
