--- a/postmarketos-wiki/html/en/Windows_Phone.html
+++ b/postmarketos-wiki/html/en/Windows_Phone.html
@@ -158,13 +158,13 @@
 <td class="field_Codename">microsoft-saana</td>
 <td class="field_Architecture">armv7</td>
 <td class="field_USB_Net"></td>
-<td class="field_Flashing"></td>
+<td class="field_Flashing">Y</td>
 <td class="field_Touch"></td>
 <td class="field_Screen"></td>
 <td class="field_Wifi"></td>
 <td class="field_Xwayland"></td>
 <td class="field_FDE"></td>
-<td class="field_Mainline"></td>
+<td class="field_Mainline">Y</td>
 <td class="field_Battery"></td>
 <td class="field_3D"></td>
 <td class="field_IMU"></td>
