--- a/postmarketos-wiki/html/en/Xiaomi_Redmi_2_(xiaomi-wt88047).html
+++ b/postmarketos-wiki/html/en/Xiaomi_Redmi_2_(xiaomi-wt88047).html
@@ -307,6 +307,7 @@ aarch64</td>
 <a href="../User:Tony0812.html" title="User:Tony0812">Tony0812</a> (<span class="cargoFieldName">Notes:</span> wt88047)</li>
 <li>
 <a href="../User:Un1Gfn.html" title="User:Un1Gfn">Un1Gfn</a> (<span class="cargoFieldName">Notes:</span> wt88047 2014811 2GB/16GB)</li>
+<li><a href="../User:Yjun.html" title="User:Yjun">Yjun</a></li>
 </ul></div>
 <p><br>
 </p>
