--- a/postmarketos-wiki/html/en/All_devices.html
+++ b/postmarketos-wiki/html/en/All_devices.html
@@ -64,32 +64,6 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="field_Device"></td>
-<td class="field_Codename"></td>
-<td class="field_Architecture"></td>
-<td class="field_Released" data-sort-value=""></td>
-<td class="field_USB_Net"></td>
-<td class="field_Flashing"></td>
-<td class="field_Touch"></td>
-<td class="field_Screen"></td>
-<td class="field_Wifi"></td>
-<td class="field_Xwayland"></td>
-<td class="field_FDE"></td>
-<td class="field_Mainline*"></td>
-<td class="field_Battery"></td>
-<td class="field_3D"></td>
-<td class="field_IMU"></td>
-<td class="field_Audio"></td>
-<td class="field_Bluetooth"></td>
-<td class="field_Camera"></td>
-<td class="field_GPS"></td>
-<td class="field_Mobile_Data"></td>
-<td class="field_SMS"></td>
-<td class="field_Calls"></td>
-<td class="field_USB-OTG"></td>
-<td class="field_NFC"></td>
-</tr>
-<tr>
 <td class="field_Device"><a href="../en/Acer_CloudMobile_S500_(acer-swing).html" title="Acer CloudMobile S500 (acer-swing)">Acer CloudMobile S500</a></td>
 <td class="field_Codename">acer-swing</td>
 <td class="field_Architecture">armv7</td>
@@ -142,7 +116,7 @@
 <td class="field_NFC">-</td>
 </tr>
 <tr>
-<td class="field_Device"><a href="../en/Acer_Liquid_Zest_4G_(Codename:_Acer-T07).html" title="Acer Liquid Zest 4G (Codename: Acer-T07)">Acer Liquid Zest 4G</a></td>
+<td class="field_Device"><a href="../en/Acer_Liquid_Zest_4G_(acer-t07).html" title="Acer Liquid Zest 4G (acer-t07)">Acer Liquid Zest 4G</a></td>
 <td class="field_Codename">acer-t07</td>
 <td class="field_Architecture">armv7</td>
 <td class="field_Released" data-sort-value="2016-01-01">2016</td>
@@ -3808,6 +3782,32 @@
 <td class="field_NFC"></td>
 </tr>
 <tr>
+<td class="field_Device"><a href="../en/LG_K40_(lg-mmh4x).html" title="LG K40 (lg-mmh4x)">LG K40</a></td>
+<td class="field_Codename">lg-mmh4x</td>
+<td class="field_Architecture">armv7</td>
+<td class="field_Released" data-sort-value="2019-01-01">2019</td>
+<td class="field_USB_Net">Y</td>
+<td class="field_Flashing">P</td>
+<td class="field_Touch"></td>
+<td class="field_Screen">P</td>
+<td class="field_Wifi"></td>
+<td class="field_Xwayland"></td>
+<td class="field_FDE"></td>
+<td class="field_Mainline*"></td>
+<td class="field_Battery"></td>
+<td class="field_3D"></td>
+<td class="field_IMU"></td>
+<td class="field_Audio"></td>
+<td class="field_Bluetooth"></td>
+<td class="field_Camera"></td>
+<td class="field_GPS"></td>
+<td class="field_Mobile_Data"></td>
+<td class="field_SMS"></td>
+<td class="field_Calls"></td>
+<td class="field_USB-OTG"></td>
+<td class="field_NFC"></td>
+</tr>
+<tr>
 <td class="field_Device"><a href="../en/LG_L65_Dual_SIM_D285_(lg-d285).html" title="LG L65 Dual SIM D285 (lg-d285)">LG L65 Dual SIM D285</a></td>
 <td class="field_Codename">lg-d285</td>
 <td class="field_Architecture">armv7</td>
@@ -6668,6 +6668,32 @@
 <td class="field_NFC">-</td>
 </tr>
 <tr>
+<td class="field_Device"><a href="../en/Samsung_Chromebook_Plus_(google-kevin).html" title="Samsung Chromebook Plus (google-kevin)">Samsung Chromebook Plus</a></td>
+<td class="field_Codename">google-kevin</td>
+<td class="field_Architecture">aarch64</td>
+<td class="field_Released" data-sort-value="2017-01-01">2017</td>
+<td class="field_USB_Net">-</td>
+<td class="field_Flashing">-</td>
+<td class="field_Touch">Y</td>
+<td class="field_Screen">Y</td>
+<td class="field_Wifi">Y</td>
+<td class="field_Xwayland">Y</td>
+<td class="field_FDE">Y</td>
+<td class="field_Mainline*">Y</td>
+<td class="field_Battery">Y</td>
+<td class="field_3D">Y</td>
+<td class="field_IMU">P</td>
+<td class="field_Audio">Y</td>
+<td class="field_Bluetooth">Y</td>
+<td class="field_Camera">Y</td>
+<td class="field_GPS">-</td>
+<td class="field_Mobile_Data">-</td>
+<td class="field_SMS">-</td>
+<td class="field_Calls">-</td>
+<td class="field_USB-OTG">-</td>
+<td class="field_NFC">-</td>
+</tr>
+<tr>
 <td class="field_Device"><a href="../en/Samsung_Galaxy_A20.html" title="Samsung Galaxy A20">Samsung Galaxy A20</a></td>
 <td class="field_Codename">samsung-a20</td>
 <td class="field_Architecture">aarch64</td>
@@ -7110,7 +7136,7 @@
 <td class="field_NFC">-</td>
 </tr>
 <tr>
-<td class="field_Device"><a href="../en/Samsung_Galaxy_Core_I8260_I8262_(samsung-arubaslim).html" title="Samsung Galaxy Core I8260/I8262 (samsung-arubaslim)">Samsung Galaxy Core I8260/I8262 (2013)</a></td>
+<td class="field_Device"><a href="../en/Samsung_Galaxy_Core_(samsung-arubaslim).html" title="Samsung Galaxy Core (samsung-arubaslim)">Samsung Galaxy Core I8260/I8262 (2013)</a></td>
 <td class="field_Codename">samsung-arubaslim</td>
 <td class="field_Architecture">armv7</td>
 <td class="field_Released" data-sort-value="2013-01-01">2013</td>
@@ -7854,7 +7880,7 @@
 <td class="field_3D"></td>
 <td class="field_IMU"></td>
 <td class="field_Audio">N</td>
-<td class="field_Bluetooth">N</td>
+<td class="field_Bluetooth">Y</td>
 <td class="field_Camera"></td>
 <td class="field_GPS"></td>
 <td class="field_Mobile_Data"></td>
@@ -7991,7 +8017,7 @@
 <td class="field_SMS">N</td>
 <td class="field_Calls">N</td>
 <td class="field_USB-OTG"></td>
-<td class="field_NFC"></td>
+<td class="field_NFC">Y</td>
 </tr>
 <tr>
 <td class="field_Device"><a href="../en/Samsung_Galaxy_S_Duos_2_(samsung-kyleprods).html" title="Samsung Galaxy S Duos 2 (samsung-kyleprods)">Samsung Galaxy S Duos 2</a></td>
@@ -9604,6 +9630,32 @@
 <td class="field_Calls"></td>
 <td class="field_USB-OTG"></td>
 <td class="field_NFC"></td>
+</tr>
+<tr>
+<td class="field_Device"><a href="../en/Samsung_Z1_(samsung-kiran).html" title="Samsung Z1 (samsung-kiran)">Samsung Z1</a></td>
+<td class="field_Codename">samsung-kiran</td>
+<td class="field_Architecture">armv7</td>
+<td class="field_Released" data-sort-value="2015-01-01">2015</td>
+<td class="field_USB_Net"></td>
+<td class="field_Flashing"></td>
+<td class="field_Touch"></td>
+<td class="field_Screen"></td>
+<td class="field_Wifi"></td>
+<td class="field_Xwayland"></td>
+<td class="field_FDE"></td>
+<td class="field_Mainline*">N</td>
+<td class="field_Battery"></td>
+<td class="field_3D"></td>
+<td class="field_IMU"></td>
+<td class="field_Audio"></td>
+<td class="field_Bluetooth"></td>
+<td class="field_Camera"></td>
+<td class="field_GPS"></td>
+<td class="field_Mobile_Data"></td>
+<td class="field_SMS"></td>
+<td class="field_Calls"></td>
+<td class="field_USB-OTG"></td>
+<td class="field_NFC">-</td>
 </tr>
 <tr>
 <td class="field_Device"><a href="../en/Samsung_Nexus_S_(samsung-crespo).html" title="Samsung Nexus S (samsung-crespo)">Samsung (Google) Nexus S</a></td>
@@ -11268,6 +11320,32 @@
 <td class="field_Calls">-</td>
 <td class="field_USB-OTG"></td>
 <td class="field_NFC">-</td>
+</tr>
+<tr>
+<td class="field_Device"><a href="../en/Xiaomi-nabu.html" title="Xiaomi-nabu">Xiaomi Pad 5</a></td>
+<td class="field_Codename">xiaomi-nabu</td>
+<td class="field_Architecture">aarch64</td>
+<td class="field_Released" data-sort-value="2021-01-01">2021</td>
+<td class="field_USB_Net">Y</td>
+<td class="field_Flashing"></td>
+<td class="field_Touch">Y</td>
+<td class="field_Screen">Y</td>
+<td class="field_Wifi"></td>
+<td class="field_Xwayland"></td>
+<td class="field_FDE"></td>
+<td class="field_Mainline*">Y</td>
+<td class="field_Battery"></td>
+<td class="field_3D"></td>
+<td class="field_IMU"></td>
+<td class="field_Audio"></td>
+<td class="field_Bluetooth"></td>
+<td class="field_Camera"></td>
+<td class="field_GPS"></td>
+<td class="field_Mobile_Data"></td>
+<td class="field_SMS"></td>
+<td class="field_Calls"></td>
+<td class="field_USB-OTG"></td>
+<td class="field_NFC"></td>
 </tr>
 <tr>
 <td class="field_Device"><a href="../en/Xiaomi_Poco_F3_(xiaomi-alioth).html" title="Xiaomi Poco F3 (xiaomi-alioth)">Xiaomi Poco F3</a></td>
@@ -13443,6 +13521,13 @@
 <td class="field_Codename">sony-pdx213</td>
 <td class="field_Architecture">aarch64</td>
 <td class="field_Released" data-sort-value="2021-01-01">2021</td>
+<td class="field_Status"></td>
+</tr>
+<tr>
+<td class="field_Device"><a href="../en/Sony_Xperia_5_II.html" title="Sony Xperia 5 II">Sony Xperia 5 II</a></td>
+<td class="field_Codename">sony-pdx206</td>
+<td class="field_Architecture">aarch64</td>
+<td class="field_Released" data-sort-value="2020-01-01">2020</td>
 <td class="field_Status"></td>
 </tr>
 <tr>
