--- a/postmarketos-wiki/html/en/Mobvoi_Ticwatch_Pro_(mobvoi-catfish).html
+++ b/postmarketos-wiki/html/en/Mobvoi_Ticwatch_Pro_(mobvoi-catfish).html
@@ -287,6 +287,8 @@ armv7</td>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
 <li>
+<a href="../User:Dodoradio.html" title="User:Dodoradio">Dodoradio</a> (<span class="cargoFieldName">Notes:</span> 4G/LTE(catshark), AsteroidOS)</li>
+<li>
 <a href="../User:GloomyJD.html" title="User:GloomyJD">GloomyJD</a> (<span class="cargoFieldName">Notes:</span> Works)</li>
 <li>
 <a href="../User:TipzTeam.html" title="User:TipzTeam">TipzTeam</a> (<span class="cargoFieldName">Notes:</span> Works fine)</li>
