--- a/postmarketos-wiki/html/en/Samsung_Galaxy_Core_Prime_VE_LTE_(samsung-coreprimevelte).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_Core_Prime_VE_LTE_(samsung-coreprimevelte).html
@@ -290,6 +290,8 @@ aarch64</td>
 </p>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
+<li>
+<a href="../User:AAT596.html" title="User:AAT596">AAT596</a> (<span class="cargoFieldName">Notes:</span> (1+) Original Android, trying to build a custom ROM for them because there's none as of now)</li>
 <li><a href="../User:CoderCharmander.html" title="User:CoderCharmander">CoderCharmander</a></li>
 <li><a href="../User:LegoLivesMatter.html" title="User:LegoLivesMatter">LegoLivesMatter</a></li>
 <li><a href="../User:StandaSK.html" title="User:StandaSK">StandaSK</a></li>
