--- a/postmarketos-wiki/html/en/Samsung_Galaxy_Tab_A_2016_(SM-T580).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_Tab_A_2016_(SM-T580).html
@@ -288,6 +288,8 @@ aarch64</td>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
 <li>
+<a href="../User:Sputnik1973.html" title="User:Sputnik1973">Sputnik1973</a> (<span class="cargoFieldName">Notes:</span> A couple of scratches, but good conditon in general, running LienageOS 18.1.)</li>
+<li>
 <a href="../User:TryzenAlpensky.html" title="User:TryzenAlpensky">TryzenAlpensky</a> (<span class="cargoFieldName">Notes:</span> Currently Running crdroid Android 12.)</li>
 <li>
 <a href="../User:Veast.html" title="User:Veast">Veast</a> (<span class="cargoFieldName">Notes:</span> Unable to install due to heimdall not flashing TWRP)</li>
