--- a/postmarketos-wiki/html/en/Sony_PSVita_(sony-psvita).html
+++ b/postmarketos-wiki/html/en/Sony_PSVita_(sony-psvita).html
@@ -285,6 +285,8 @@ armv7</td>
 <h2><span class="mw-headline" id="Users_owning_this_device">Users owning this device</span></h2>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;"><ul style="margin-top: 0;">
 <li>
+<a href="../User:UltrasonicMadness.html" title="User:UltrasonicMadness">UltrasonicMadness</a> (<span class="cargoFieldName">Notes:</span> PCH-2016, Lego Action Heroes Mega Pack)</li>
+<li>
 <a href="../User:Ungeskriptet.html" title="User:Ungeskriptet">Ungeskriptet</a> (<span class="cargoFieldName">Notes:</span> PCH-2000 Wi-Fi Black, A few scuffs but overall good condition and also jailbreaked with enso)</li>
 </ul></div>
 <p><br>
